[package]
name = "yabba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
chrono-tz = "0.8.3"
once_cell = "1.18.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.183", features = ["derive"] }
image = { version = "0.24.4" }
axum = { version = "0.6.20", features = ["headers"] }
tokio = { version = "1.29.1", features = ["full"] }
futures = "0.3.28"
moka = { version = "0.11.3", features = ["future"] }
rand = "0.8.5"

canvas = { git = "https://github.com/nathanielfernandes/canvas.git" }
gifstream = { git = "https://github.com/nathanielfernandes/gifstream.git" }
